# ap-e2024-pub

./: .gitignore
a1/a1-handout/a1-code 2/src/APL/: AST.hs  Eval.hs  Eval_Tests.hs
a1/a1-handout/a1-code/src/APL/: AST_Tests.hs
a1/a1-handout/src/APL/: Eval.hs  Eval_Tests.hs
a2/a2-handout/: test.hs
a2/a2-handout/src/APL/: Check.hs  Check_Tests.hs  Eval.hs  Eval_Tests.hs
a3/a3-handout/: graph  graph.ambig  graph.origin  graph.sh
a3/a3-handout/src.try1.atomapply/APL/: Parser.hs
a3/a3-handout/src.try2.applyExpAtom/APL/: Parser.hs
a3/a3-handout/src/APL/: Parser.hs  Parser_Tests.hs  graph-a3  graph-given  orz0-graph
a4/a4-handout/: db.txt  temp2.txt
a4/a4-handout.stash.nomod/src/APL/: Eval.hs  InterpIO.hs  Monad.hs
a4/a4-handout/src/APL/: Eval.hs  InterpIO.hs  InterpPure.hs  Interp_Tests.hs  Monad.hs
a5/a5-handout/: test
a5/a5-handout.1/src/APL/: Tests.hs
a5/a5-handout.genlist/src/APL/: Tests.hs
a5/a5-handout.list_of_gen_vname/src/APL/: Tests.hs
a5/a5-handout.orgin/: test
a5/a5-handout/src/APL/: AST.hs  Eval.hs  Parser.hs  Tests.hs
a6/a6-handout-try-1/src/: GenServer.hs  SPC.hs
a6/a6-handout.centrally/src/: SPC_Tests.hs
a6/a6-handout.stop.worker.v1/src/: SPC.hs  SPC_Tests.hs
a6/a6-handout.try-2/src/: GenServer.hs  SPC.hs
a6/a6-handout.try3orz/src/: SPC.hs
a6/a6-handout/src/: SPC.hs  SPC_Tests.hs
a7/: CHANGELOG.md  LICENSE  a7.cabal  runtests.hs
a7/src/: GenServer.hs  SPC.hs  SPC_Tests.hs
a7/src/SPC/: InterpIO.hs  InterpPure.hs  Monad.hs  SPC_Tests.hs
a8/: CHANGELOG.md  LICENSE  a8.cabal
a8/src/APL/: AST.hs  InterpIO.hs  InterpPure.hs  Tests.hs
a9/a4-handout/: A2.csv  A3.csv  A4.csv  B.csv  B2.csv  B3.csv  B4.csv  a4.cabal  db.txt  test.csv
a9/a4-handout/src/APL/: AST.hs  Eval.hs  InterpIO.hs  Monad.hs
week1/handout/: hwj.hs  run.sh
week1/handout/src/APL/: .AST.hs.swp  .Eval.hs.swp  .Eval_Tests.hs.swp  AST.hs  Eval.hs  Eval_Tests.hs
week2/handout/src/APL/: Eval.1.hs  Eval.hs  Eval.standard.hs
week3/handout/src/APL/: Parser.hs  Parser_Tests.hs
week5/handout/src/APL/: Tests.hs
week6/solution/src/: SPC.hs
