cabal-version:      3.0
name:               a8
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             santiweide
maintainer:         ggy_778@outlook.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    default-language: Haskell2010
    ghc-options: -Wall

library
    import: common
    hs-source-dirs: src
    build-depends:
        base
      , tasty
      , tasty-hunit
      , process
      , directory
    exposed-modules:
        APL.AST
        APL.Eval
        APL.InterpPure
        APL.InterpIO
        APL.Interp_Tests
        APL.Monad
        APL.Util

test-suite a8-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          runtests.hs
    build-depends:
        base
      , tasty
      , a8